# raytracer

./: .gitignore  .nfs000000000b0234d3000009e4  CMakeLists.txt  Makefile  bunny.ppm  cornellbox_front.ppm  dragon_bg.ppm  dragon_lowres2.ppm  face.cpp  face.h  jpeg.cpp  jpeg.h  main  main.cpp  mesh.cpp  mesh.h  object.cpp  object.h  parser.cpp  parser.h  ppm.cpp  ppm.h  ray.cpp  raytrace_pseudocode  raytracer  scienceTree_512x512.ppm  scienceTree_biggg.tar.xz  scienceTree_t1.ppm  scienceTree_t2.ppm  scienceTree_wp.ppm  simple.ppm  simple_reflectance.ppm  sphere.cpp  sphere.h  texture.cpp  texture.h  transformations.h  triangle.cpp  triangle.h  utility.cpp  (+4 more)
hw1_sample_scenes/: dragon_bg.xml  dragon_lowres.xml  horse_and_mug.xml  sciencetree_2l.xml  sciencetree_wp.xml  simple.xml  simple_reflectance.xml
include/: Ray.h  bbox.h  bvh.h  camera.h  jpeg.h  mesh.h  object.h  parser.h  ppm.h  qsplit.h  ray.h  shade.h  sphere.h  texture.h  tinyply.h  tinyxml2.h  triangle.h  utility.h  vector3d.h  vertex.h
res/477_hw1/: sciencetree_wp.xml  simple.xml
res/477_hw2/: simple_transform.xml
res/795_hw1/: simple.xml  spheres.xml
res/795_hw2/: cornellbox_lookat.xml
res/795_hw3/: cornellbox_boxes_dynamic.xml  cornellbox_dynamic.xml  dragon_dynamic.xml
sent/: mesh.h  parser.cpp  parser.h  ray.h  raytracer  sphere.h  vector3d.h
src/: bvh.cpp  jpeg.cpp  main.cpp  parser.cpp  parser_ply.cpp  ppm.cpp  shade.cpp  tinyxml2.cpp  utility.cpp
